fix(login): enhance password input with toggle visibility and styling

--- a/src/app/features/login/login.component.scss
+++ b/src/app/features/login/login.component.scss
@@ -156,3 +156,28 @@ h2 {
     display: none;
   }
 }
+
+.input-password-wrapper {
+  position: relative;
+  display: flex;
+  align-items: center;
+}
+
+.input-password-wrapper input {
+  width: 100%;
+  padding-right: 2.5rem; // espaço para o botão
+}
+
+.toggle-password {
+  position: absolute;
+  right: 0.5rem;
+  background: transparent;
+  border: none;
+  cursor: pointer;
+  outline: none;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  color: #888;
+  font-size: 1.2rem;
+}
